fixed typo, standardized CongressChart, and added Google Groups link.
Signed-off-by: John Medema <jmedema@medemaforprez.com>

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Medema for President!<br/>
 <li class="navbarEntry" id="menuInternational" onclick="sectionClicked('International')">International Affairs</li>
 <li class="navbarEntry" id="menuNasa" onclick="sectionClicked('Nasa')">NASA</li>
 <li class="navbarEntry" id="menuJournal" onclick="sectionClicked('Joser')">JoSER</li>
-<li class="navbarEntry" id="menuContact" onclick="sectionClicked('Contact')">Contact Me</li>
+<li id="menuContact"><a class="navbarEntry" target="_blank" href="https://groups.google.com/d/forum/medemaforprez">Contact Me</a></li>
 <li class="navbarEntry" id="menuGames" onclick="sectionClicked('Games')">Fun &amp; Games</li>
 </ul>
 </td>
@@ -371,7 +371,7 @@ For the math nerds, below are the summaries of the changes that would apply to d
 <br/>
 <br/>
 <strong>References:</strong><br/>
-<a href="http://www.microsoft.com/en-us/download/details.aspx?id=10">Excel Viewer</><br/>
+<a href="http://www.microsoft.com/en-us/download/details.aspx?id=10">Excel Viewer</a><br/>
 <a href="http://www.whitehouse.gov/sites/default/files/omb/budget/fy2015/assets/hist.pdf">2013 overall tax breakdown</a><br/>
 <a href="https://www.irs.gov/pub/irs-soi/13in12ms.xls">All 2013 Individual Returns (Adjusted Gross Income, Exemptions, Deductions, and Tax Items) by Size of AGI and Marital Status</a><br/>
 <a href="https://www.irs.gov/pub/irs-soi/13co05ccr.xls">All 2013 Corporate Returns (Adjusted Gross Income, Exemptions, Deductions, and Tax Items) by Sector, then Size of Business Receipts</a><br/>
@@ -407,7 +407,7 @@ I don't know about other industries, but our congressmen/women don't know jack a
 <strong>Solution: Increase the number of Representatives and Senators</strong><br/>
 As you can see below, the number of constituents per Congressperson has been growing steadily throughout the history of the United States.  Over time, this has led to each congressperson to become more and more powerful and less in touch with their constituents.<br/>
 <br/>
-<table id="CongressChart">
+<table id="CongressChart" class="chart">
 <tr><td>Yr (census <br/>/ election)</td><td>US Pop.</td><td># Rep</td><td>Pop./Rep.</td><td># Sen</td><td>Pop./Sen.</td></tr>
 <tr><td>1790/1793</td><td>3,929,214</td><td>105</td><td>37,421</td><td>26</td><td>151,123</td></tr>
 <tr><td>1870/1873</td><td>38,558,371</td><td>293</td><td>131,598</td><td>74</td><td>521,059</td></tr>
