Added fun column and joke capability.
Signed-off-by: John Medema <jmedema@medemaforprez.com>

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 <table id="main_layout" style="width: 100%;">
 <tr>
-<td id="dummy">
+<td id="dummyLeft">
 </td>
 <td id="header">
 <h1>John E. Medema III</h1><br/>
@@ -29,9 +29,14 @@ Medema for President!<br/>
 <span id="tagline">Innovative solutions for complex problems</span>
 <br/>
 </td>
+<td id="dummyRight">
+</td>
 </tr>
+
+
+
 <tr>
-<td id="navbar" style="border-top: 3px; border-right: 0; border-bottom: 0; border-left: 0; border-style: solid; border-color: #CC0000;">
+<td id="navbar">
 <ul class="navbar">
 <li class="navbarHeader">Sections</li>
 <li class="navbarEntry" id="menuSummary" onclick="sectionClicked('Summary')">Summary</li>
@@ -55,7 +60,7 @@ Medema for President!<br/>
 </ul>
 </td>
 
-<td id="main" style="border-top: 3px; border-right: 0; border-bottom: 0; border-left: 0; border-style: solid; border-color: #CC0000;">
+<td id="main">
 <div class="section" id="Summary">
 <a name="summary"></a>
 <br/>
@@ -1021,9 +1026,18 @@ Todo: set up a Google Group for MfP2016.<br/>
 <br/>
 <br/>
 </div>
-
-
 </td>
+
+
+
+<td id="fun">
+<br/>
+<br/>
+<img id="pic" src="buddy_medema.jpg" alt="" style="width:3px;height:2px;"/><br/>
+<br/>
+<span id="joke">Lobotomies are a corporate benefit</span>
+</td>
+
 </tr>
 </table>
 </body>
