Signed-off-by: John Medema <jmedema@medemaforprez.com>

--- a/index.html
+++ b/index.html
@@ -1033,7 +1033,7 @@ Todo: set up a Google Group for MfP2016.<br/>
 <td id="fun">
 <br/>
 <br/>
-<img id="pic" src="buddy_medema.jpg" alt="" style="width:3px;height:2px;"/><br/>
+<img id="pic" src="buddy_medema.jpg" alt="" /><br/>
 <br/>
 <span id="joke">Lobotomies are a corporate benefit</span>
 </td>
